--- a/vast-react/package.json
+++ b/vast-react/package.json
@@ -17,6 +17,7 @@
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "three": "^0.182.0"
   },
   "devDependencies": {
